fix: add word_break class to fix table overflows in v2 components

--- a/src/users/index.scss
+++ b/src/users/index.scss
@@ -6,6 +6,6 @@ button.neg-margin-top {
   margin-top: -7px;
 }
 
-a.word_break {
+.word_break {
   word-break: break-word;
 }
